--- a/about us.html
+++ b/about us.html
@@ -8,53 +8,77 @@
 <body>
     <h1>4Seasonfoods</h1>
     <h3>About us</h3>
+    <ul>
+        <li><a href="#step1">Step 1</a></li>
+        <li><a href="#step2">Step 2</a></li>
+        <li><a href="#step3">Step 3</a></li>
+        <li><a href="#step4">Step 4</a></li>
+        <li><a href="#step5">Step 5</a></li>
+        <li><a href="#step6">Step 6</a></li>
+        <li><a href="#step7">Step 7</a></li>
+        <li><a href="#step8">Step 8</a></li>
+    </ul>
     <p>
-
+<h3 id="step1">STEP 1</h3>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Similique optio corporis sit illum nostrum recusandae ex, expedita
         eveniet,ullam cumque consequuntur quaerat suscipit dicta tenetur
         eius nesciunt aspernatur adipisci eos iusto veritatis, ipsa nam
         non porro? Vero, reiciendis accusamus quia, necessitatibus 
         explicabo maxime deserunt atque, ea assumenda dicta hic sapiente
-        pariatur. <br>Minus temporibus at nemo, nam, dicta quibusdam eligendi
+        pariatur. <a href="#">Go To Top</a><br>
+        <H3 id="step2">STEP 2</H3>
+        Minus temporibus at nemo, nam, dicta quibusdam eligendi
         blanditiis ducimus quidem consequatur officia alias provident
         voluptates. Facere incidunt ipsum labore quaerat minima
         architecto suscipit nesciunt assumenda odit, commodi eius
         pariatur ullam nihil eos eum numquam ex cumque debitis
-        cupiditate! <br>Autem amet dolores recusandae? Veniam neque
+        cupiditate! <a href="#">Go To Top</a><br> 
+        <H3 id="step3">STEP 3 </H3>
+        Autem amet dolores recusandae? Veniam neque
         modi saepe similique natus ea repellat tempora, voluptas
         dolorem, culpa vero, nesciunt quam reiciendis sapiente
         praesentium dolor quo officiis blanditiis.
         Soluta aperiam autem voluptatem eos deleniti quos
-        eveniet architecto nemo, <br>tempora molestiae. 
+        eveniet architecto nemo, <a href="#">Go To Top</a><br> 
+        <H3 id="step4">STEP 4</H3>
+        tempora molestiae. 
         Doloremque neque voluptatum molestiae porro!
         Dicta ipsum vero commodi autem quo voluptates 
         temporibus nemo natus dolores architecto, cumque 
-        corrupti tempore, <br>debitis voluptatibus adipisci fuga
+        corrupti tempore, <a href="#">Go To Top</a><br> 
+        <H3 id="step5">STEP 5</H3>
+        debitis voluptatibus adipisci fuga
         libero eveniet doloribus velit ullam, tempora culpa
         incidunt vitae excepturi! Eaque perspiciatis maxime
         molestias obcaecati ex repellendus quis, voluptate
-        officiis incidunt numquam? <br>Quod ullam voluptas
+        officiis incidunt numquam?  <a href="#">Go To Top</a><br> 
+        <H3 id="step6">STEP 6</H3>
+        Quod ullam voluptas
         eaque commodi. Necessitatibus vel illum totam
         officia dolorum! Incidunt rem expedita molestias
         commodi veniam aspernatur necessitatibus
         amet reiciendis esse blanditiis eaque, ea
         tempora modi quisquam officiis aliquam numqua
         dignissimos rerum iure voluptatem magnam quam
-        ut excepturi. Perspiciatis facere, <br>voluptatum debitis consectetur
+        ut excepturi. Perspiciatis facere, <a href="#">Go To Top</a> <br> 
+        <H3 id="step7">STEP 7</H3>
+        voluptatum debitis consectetur
         esse magni a, harum facilis quo tempora iste magnam odio quos
         necessitatibus obcaecati recusandae, quas aspernatur asperiores
         architecto perferendis sint maiores non placeat quisquam! 
         Repudiandae corrupti, sed sequi eius unde officiis incidunt, 
-        quisquam numquam ullam ratione quae atque. <br>Obcaecati explicabo 
+        quisquam numquam ullam ratione quae atque. <a href="#">Go To Top</a> <br>
+        <H3 id="step8">STEP 8</H3>
+        Obcaecati explicabo 
         placeat nam nulla, quidem cupiditate voluptatum fugiat vero ex
         vitae hic excepturi voluptas animi quisquam rerum quas consequuntur
-        beatae est eveniet quo consequatur ipsum dolorum impedit
-        
-
-    </p>
-    <li><a href="about us.html" target="_blank">About Us</a></li>
+        beatae est eveniet quo consequatur ipsum dolorum impedit. 
+        <a href="#">Go To Top</a><br>
+         </p>
+   <p> <li><a href="about us.html" target="_blank">About Us</a></li>
     <li><a href="contact us.html" target="_blank">Contact Us</a></li>
     <li><a href="index.html" target="_blank">Go To Home</a></li>
+</p>
 </body>
 </html>
