--- a/Snaks/Kabab.html
+++ b/Snaks/Kabab.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>KABAB</h1>
+    <img src="../Image/Kabab.jpg" width="300" height="200" alt="Kabab image">
     <h3>List Of Kabab</h3>
     <p>There are 4 types of Rolls</p>
     <ol>
