--- a/Sea Food/Fish.html
+++ b/Sea Food/Fish.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>FISH</h1>
+    <img src="../Image/fried fish.jpg" width="300" height="200" alt="Fish image">
     <h3>List Of Fish</h3>
     <p>There are 5 types of Rolls</p>
     <ol>
