--- a/Sea Food/Lobster.html
+++ b/Sea Food/Lobster.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>LOBSTER</h1>
+    <img src="../Image/fried lobster.jpg" width="300" height="200" alt="Lobster imge">
     <h3>List Of Lobster</h3>
     <p>There are 3 types of Rolls</p>
     <ol>
