--- a/Sea Food/Prawn.html
+++ b/Sea Food/Prawn.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>PRAWN</h1>
+    <img src="../Image/fried-prawns.jpg" width="300" height="200" alt="Prawn image"> 
     <h3>List Of Prawn</h3>
     <p>There are 3 types of Rolls</p>
     <ol>
