--- a/Snaks/Roll.html
+++ b/Snaks/Roll.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>ROLL</h1>
+    <img src="../Image/Roll image.jpg" width="300" height="200" alt="">
     <h3>List Of Roll</h3>
     <p>There are 4 types of Rolls</p>
     <ol>
