--- a/Snaks/Samosa.html
+++ b/Snaks/Samosa.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>SAMOSA</h1>
+    <img src="../Image/samosa.jpg" width="300pxl" height="200pxl" alt="Samosa image">
     <h3>List Of Samosa</h3>
     <p>There are 4 types of Samosa we deleverd to our coustomer</p>
     <ol>
