--- a/Sea Food/Fish.html
+++ b/Sea Food/Fish.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fish</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>FISH</h1>
-    <img src="../Image/fried fish.jpg" width="300" height="200" alt="Fish image">
+    <img
+      src="../Image/fried fish.jpg"
+      width="300"
+      height="200"
+      alt="Fish image"
+    />
     <h3>List Of Fish</h3>
     <p>There are 5 types of Rolls</p>
     <ol>
-        <li>Surmai Fish</li>
-        <li>Rao Fish</li>
-        <li>Pamplet Fish</li>
-        <li>Pangasius Fish</li>
-        <li>Heera Fish</li>
-        
+      <li>Surmai Fish</li>
+      <li>Rao Fish</li>
+      <li>Pamplet Fish</li>
+      <li>Pangasius Fish</li>
+      <li>Heera Fish</li>
     </ol>
     <li><a href="Prawn.html">Prawn</a></li>
     <li><a href="Lobster.html">Lobster</a></li>
@@ -24,5 +28,5 @@
     <li><a href="../Snaks/Roll.html">Roll</a></li>
     <li><a href="../Snaks/Kabab.html">Kabab</a></li>
     <li><a href="../index.html">Go To Home</a></li>
-</body>
+  </body>
 </html>
