--- a/Sea Food/Lobster.html
+++ b/Sea Food/Lobster.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lobster</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>LOBSTER</h1>
-    <img src="../Image/fried lobster.jpg" width="300" height="200" alt="Lobster imge">
+    <img
+      src="../Image/fried lobster.jpg"
+      width="300"
+      height="200"
+      alt="Lobster imge"
+    />
     <h3>List Of Lobster</h3>
     <p>There are 3 types of Rolls</p>
     <ol>
-        <li>Tiger Lobster</li>
-        <li>Crab</li>
-        <li>Black Loster</li>
-        
+      <li>Tiger Lobster</li>
+      <li>Crab</li>
+      <li>Black Loster</li>
     </ol>
     <li><a href="Prawn.html">Prawn</a></li>
     <li><a href="Fish.html">Fish</a></li>
@@ -22,5 +26,5 @@
     <li><a href="../Snaks/Roll.html">Roll</a></li>
     <li><a href="../Snaks/Kabab.html">Kabab</a></li>
     <li><a href="../index.html">Go To Home</a></li>
-</body>
+  </body>
 </html>
