--- a/Sea Food/Prawn.html
+++ b/Sea Food/Prawn.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prawn</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>PRAWN</h1>
-    <img src="../Image/fried-prawns.jpg" width="300" height="200" alt="Prawn image"> 
+    <img
+      src="../Image/fried-prawns.jpg"
+      width="300"
+      height="200"
+      alt="Prawn image"
+    />
     <h3>List Of Prawn</h3>
     <p>There are 3 types of Rolls</p>
     <ol>
-        <li>Tiger Prawn</li>
-        <li>Red Prawn</li>
-        <li>Jera Prawn</li>
+      <li>Tiger Prawn</li>
+      <li>Red Prawn</li>
+      <li>Jera Prawn</li>
     </ol>
-    
+
     <li><a href="Lobster.html">Lobster</a></li>
     <li><a href="Fish.html">Fish</a></li>
     <li><a href="../Snaks/Samosa.html">Samosa</a></li>
     <li><a href="../Snaks/Roll.html">Roll</a></li>
     <li><a href="../Snaks/Kabab.html">Kababa</a></li>
-    <li><a href="../index.html">Go To Home</a></li> 
-</body>
+    <li><a href="../index.html">Go To Home</a></li>
+  </body>
 </html>
