--- a/Snaks/Samosa.html
+++ b/Snaks/Samosa.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SAMOSA</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>SAMOSA</h1>
-    <img src="../Image/samosa.jpg" width="300pxl" height="200pxl" alt="Samosa image">
+    <img
+      src="../Image/samosa.jpg"
+      width="300pxl"
+      height="200pxl"
+      alt="Samosa image"
+    />
     <h3>List Of Samosa</h3>
-    <p>There are 4 types of Samosa we deleverd to our coustomer</p>
+    <p>
+      There are 4 types of Samosa
+      <img src="../Image/th.jpg" height="200" width="200" alt="" /> we
+      deleverd to our coustomer
+    </p>
     <ol>
-        <li>Chicken Samosa</li>
-        <li>Beef Samosa</li>
-        <li>Potato Samosa</li>
-        <li>D Samosa</li>
+      <li>Chicken Samosa</li>
+      <li>Beef Samosa</li>
+      <li>Potato Samosa</li>
+      <li>D Samosa</li>
     </ol>
     <li><a href="Roll.html">Roll</a></li>
     <li><a href="Kabab.html">Kabab</a></li>
@@ -22,5 +31,5 @@
     <li><a href="../Sea Food/Lobster.html">Lobster</a></li>
     <li><a href="../Sea Food/Fish.html">Fish</a></li>
     <li><a href="../index.html">Go To Home</a></li>
-</body>
+  </body>
 </html>
