--- a/contact us.html
+++ b/contact us.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <h3>CONTACT</h3>
-   <ul>
-    <li><a href="contact us.html" target="_blank">Contact Us</a></li>
-    <li><a href="about us.html" target="_blank">About Us</a></li>
-    <li><a href="index.html" target="_blank">Go To Home</a></li><br>
-    <li><a href="mailto:blueshaperd3@gmail.com" target="_blank">Mail to Rehan</a></li>
-    <li><a href="telto:03218771520" target="_blank">Phone to Rehan</a></li>
-    </ul>  
-</body>
+    <ul>
+      <li><a href="contact us.html" target="_blank">Contact Us</a></li>
+      <li><a href="about us.html" target="_blank">About Us</a></li>
+      <li><a href="index.html" target="_blank">Go To Home</a></li>
+      <br />
+      <li>
+        <a href="mailto:blueshaperd3@gmail.com" target="_blank"
+          >Mail to Rehan</a
+        >
+      </li>
+      <li><a href="telto:03218771520" target="_blank">Phone to Rehan</a></li>
+    </ul>
+  </body>
 </html>
