--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Total Salani Work</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li><a href="index.html" target="_blank">Go To Home</a></li>
-        <li><a href="contact us.html" target="_blank">Contact Us</a></li>
-        <li><a href="about us.html" target="_blank">About Us</a></li>
-        </ul>
-        <h1>Frozen food</h1>
-        <h3>HISTORY</h3>
-        Natural food freezing <b><i>(Using Winter Frosts)</i></b>had been in use by people
-        in cold climates for centuries.
-        In 1861 Thomas Sutcliffe Mort established at Darling Harbour in Sydney,
-        Australia,<br> The world's first freezing works, which later became the
-        New South Wales Fresh Food and Ice Company. Mort financed experiments
-        by Eugene Dominic Nicolle, a French born engineer who had arrived 
-        in Sydney in 1853 and registered his first ice-making patent in 1861.
-        The first trial shipment of frozen meat to London was in 1868. 
-        Although their machinery was never used in the frozen meat trade,
-        Mort and Nicolle developed commercially viable systems for domestic
-        trade. <br>The financial return on that investment was minimal for Mort.
-        Regular shipments of frozen meat from Australia and New Zealand
-        to Europe began in 1881, with a consignment of frozen New Zealand
-        sheep exported to London on board the Dunedin. <hr>
+      <li><a href="index.html" target="_blank">Go To Home</a></li>
+      <li><a href="contact us.html" target="_blank">Contact Us</a></li>
+      <li><a href="about us.html" target="_blank">About Us</a></li>
+    </ul>
+    <h1>Frozen food</h1>
+    <h3>HISTORY</h3>
+    Natural food freezing <b><i>(Using Winter Frosts)</i></b
+    >had been in use by people in cold climates for centuries. In 1861 Thomas
+    Sutcliffe Mort established at Darling Harbour in Sydney, Australia,<br />
+    The world's first freezing works, which later became the New South Wales
+    Fresh Food and Ice Company. Mort financed experiments by Eugene Dominic
+    Nicolle, a French born engineer who had arrived in Sydney in 1853 and
+    registered his first ice-making patent in 1861. The first trial shipment of
+    frozen meat to London was in 1868. Although their machinery was never used
+    in the frozen meat trade, Mort and Nicolle developed commercially viable
+    systems for domestic trade. <br />The financial return on that investment
+    was minimal for Mort. Regular shipments of frozen meat from Australia and
+    New Zealand to Europe began in 1881, with a consignment of frozen New
+    Zealand sheep exported to London on board the Dunedin.
+    <hr />
 
-<h3>TECNOLOGY</h3>
-The freezing technique itself, just like the frozen food market,
-is developing to become faster, more efficient and more cost-effective.
-As demonstrated by Birdseye's work, faster freezing means smaller ice 
-crystals and a better-preserved product.
-<h3>We Serve You 2 Types Of Frozen Food </h3>
-<ul>
-<li>Snaks</li>
-</ul>
-    <ol>
-        <li><a href="Snaks/Samosa.html" target="_blank">Samosa</a></li>
-        <li><a href="Snaks/Roll.html" target="_blank">Roll</a></li>
-        <li><a href="Snaks/Kabab.html" target="_blank">Kababa</a></li>
-    </ol>
+    <h3>TECNOLOGY</h3>
+    The freezing technique itself, just like the frozen food market, is
+    developing to become faster, more efficient and more cost-effective. As
+    demonstrated by Birdseye's work, faster freezing means smaller ice crystals
+    and a better-preserved product.
+    <h3>We Serve You 2 Types Of Frozen Food</h3>
     <ul>
-    <li>Sea Food</li>
+      <li>Snaks</li>
     </ul>
     <ol>
-        <li><a href="Sea Food/Fish.html" target="_blank">Fish</a></li>
-        <li><a href="Sea Food/Lobster.html" target="_blank">Lobster</a></li>
-        <li><a href="Sea Food/Prawn.html" target="_blank">Prawn</a></li>
+      <li><a href="Snaks/Samosa.html" target="_blank">Samosa</a></li>
+      <li><a href="Snaks/Roll.html" target="_blank">Roll</a></li>
+      <li><a href="Snaks/Kabab.html" target="_blank">Kababa</a></li>
     </ol>
-</body>
+    <ul>
+      <li>Sea Food</li>
+    </ul>
+    <ol>
+      <li><a href="Sea Food/Fish.html" target="_blank">Fish</a></li>
+      <li><a href="Sea Food/Lobster.html" target="_blank">Lobster</a></li>
+      <li><a href="Sea Food/Prawn.html" target="_blank">Prawn</a></li>
+    </ol>
+  </body>
 </html>
