--- a/Snaks/Kabab.html
+++ b/Snaks/Kabab.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kabab</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>KABAB</h1>
-    <img src="../Image/Kabab.jpg" width="300" height="200" alt="Kabab image">
+    <img src="../Image/Kabab.jpg" width="300" height="200" alt="Kabab image" />
     <h3>List Of Kabab</h3>
     <p>There are 4 types of Rolls</p>
     <ol>
-        <li>Chiken Kabab</li>
-        <li>Beef Kabab</li>
-        <li>Kabab Roll</li>
-        <li>Sekha Kabab</li>
+      <li>Chiken Kabab</li>
+      <li>Beef Kabab</li>
+      <li>Kabab Roll</li>
+      <li>Sekha Kabab</li>
     </ol>
     <li><a href="Roll.html">Roll</a></li>
     <li><a href="Samosa.html">Samosa</a></li>
@@ -22,5 +22,5 @@
     <li><a href="../Sea Food/Lobster.html">Lobster</a></li>
     <li><a href="../Sea Food/Fish.html">Fish</a></li>
     <li><a href="../index.html">Go To Home</a></li>
-</body>
+  </body>
 </html>
