--- a/Snaks/Roll.html
+++ b/Snaks/Roll.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roll</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>ROLL</h1>
-    <img src="../Image/Roll image.jpg" width="300" height="200" alt="">
+    <img src="../Image/Roll image.jpg" width="300" height="200" alt="" />
     <h3>List Of Roll</h3>
     <p>There are 4 types of Rolls</p>
     <ol>
-        <li>Chiken Roll</li>
-        <li>Beef Roll</li>
-        <li>Vegetable Roll</li>
-        <li>Potato Roll</li>
+      <li>Chiken Roll</li>
+      <li>Beef Roll</li>
+      <li>Vegetable Roll</li>
+      <li>Potato Roll</li>
     </ol>
     <li><a href="../Snaks/Samosa.html">Samosa</a></li>
     <li><a href="Kabab.html">Kabab</a></li>
@@ -22,5 +22,5 @@
     <li><a href="../Sea Food/Lobster.html">Lobster</a></li>
     <li><a href="../Sea Food/Fish.html">Fish</a></li>
     <li><a href="../index.html">Go To Home</a></li>
-</body>
+  </body>
 </html>
