--- a/Sea Food/Fish.html
+++ b/Sea Food/Fish.html
@@ -21,6 +21,10 @@
       <li>Pamplet Fish</li>
       <li>Pangasius Fish</li>
       <li>Heera Fish</li>
+      <figure>
+        <img src="../Image/fried fish gif.gif" width="300" height="200" />
+        <figcaption>Pangasius fried in bread crums</figcaption>
+      </figure>
     </ol>
     <li><a href="Prawn.html">Prawn</a></li>
     <li><a href="Lobster.html">Lobster</a></li>
