--- a/Snaks/Kabab.html
+++ b/Snaks/Kabab.html
@@ -14,7 +14,11 @@
       <li>Chiken Kabab</li>
       <li>Beef Kabab</li>
       <li>Kabab Roll</li>
-      <li>Sekha Kabab</li>
+      <li>Sekha Kabab</li> 
+      <figure>
+      <img src="../Image/fried kabab gif.gif" width="300" height="200" alt="">
+     <figcaption>Very very delicious Kabab</figcaption>
+      </figure>
     </ol>
     <li><a href="Roll.html">Roll</a></li>
     <li><a href="Samosa.html">Samosa</a></li>
