--- a/Snaks/Samosa.html
+++ b/Snaks/Samosa.html
@@ -16,7 +16,7 @@
     <h3>List Of Samosa</h3>
     <p>
       There are 4 types of Samosa
-      <img src="../Image/th.jpg" height="200" width="200" alt="" /> we
+      <img src="../Image/samosa gif.gif.crdownload" height="200" width="200" alt="" /> we
       deleverd to our coustomer
     </p>
     <ol>
