--- a/Snaks/Samosa.html
+++ b/Snaks/Samosa.html
@@ -16,7 +16,7 @@
     <h3>List Of Samosa</h3>
     <p>
       There are 4 types of Samosa
-      <img src="../Image/samosa gif.gif.crdownload" height="200" width="200" alt="" /> we
+      <img src="../Image/samosa gif.gif" height="200" width="200" alt="" /> we
       deleverd to our coustomer
     </p>
     <ol>
@@ -24,6 +24,28 @@
       <li>Beef Samosa</li>
       <li>Potato Samosa</li>
       <li>D Samosa</li>
+      <table border="2px"> 
+       <tr>
+        <th>Samosa Name</th>
+        <th>Rate</th>
+       </tr>
+       <tr>
+        <td>Chicken Samosa</td>
+        <td>Rs450 Dozen</td>
+       </tr>
+       <tr>
+        <td>Beef Samosa</td>
+        <td>Rs500 Dozen</td>
+       </tr>
+       <tr>
+        <td>Potato Samosa</td>
+        <td>Rs400 Dozen</td>
+       </tr>
+       <tr>
+        <td>D Samosa</td>
+        <td>Rs550 Dozen</td>
+       </tr>
+      </table>
     </ol>
     <li><a href="Roll.html">Roll</a></li>
     <li><a href="Kabab.html">Kabab</a></li>
